--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -192,7 +192,7 @@
     </main>
 
     <footer class="pie">
-        <div class="cuerpo-ancho" style="padding-top: 30px; padding-bottom: 30px;">
+        <div class="cuerpo-ancho" style="padding: 30px 10px;">
             <div style="display: flex; align-items: center; font-size: 17px;">
                 <div style="width: 65%; text-align: left;">
                     <div>
@@ -200,7 +200,7 @@
                     </div>
                     
                     <div style="font-size: 16px; margin-top: 30px;">
-                        <a href="https://github.com/pepeizq/pepeizqs-deals-web/" target="_blank" style="text-decoration: none;"><i class="fa-brands fa-github" style="font-size: 20px; margin-right: 10px;"></i>@Herramientas.Idiomas.CogerCadena(idioma, "Layout.SourceCode")</a> • <a href="/Contact" style="text-decoration: none;">@Herramientas.Idiomas.CogerCadena(idioma, "Layout.Contact")</a> • <a href="/Privacy" style="text-decoration: none;">@Herramientas.Idiomas.CogerCadena(idioma, "Layout.Privacy")</a>
+                        <a href="https://github.com/pepeizq/pepeizqs-deals-web/" target="_blank" style="text-decoration: none;"><i class="fa-brands fa-github" style="font-size: 20px; margin-right: 10px;"></i>@Herramientas.Idiomas.CogerCadena(idioma, "Layout.SourceCode")</a> • <a href="/api" style="text-decoration: none;">@Herramientas.Idiomas.CogerCadena(idioma, "Layout.Api")</a> • <a href="/Contact" style="text-decoration: none;">@Herramientas.Idiomas.CogerCadena(idioma, "Layout.Contact")</a> • <a href="/Privacy" style="text-decoration: none;">@Herramientas.Idiomas.CogerCadena(idioma, "Layout.Privacy")</a>
                     </div>
                 </div>
 
