--- a/pepeizqs deals web/wwwroot/css/maestro.css
+++ b/pepeizqs deals web/wwwroot/css/maestro.css
@@ -21,6 +21,7 @@
     --fondoDlc: #733b7f;
     --colorEnlace: #95c0fe;
     --colorEnlaceHover: #3486fd;
+    --fondoCodigo: #345884;
 }
 
 @font-face {
